feat: 实现动态路由系统和安全增强
后端改进：
- 添加 getUserMenuTree 接口，返回用户权限菜单树
- JWT 密钥从环境变量读取，生产环境强制配置
- CORS 配置从配置文件读取，支持多域名
- 添加 CSRF Token 机制

前端改进：
- 实现动态路由加载系统（根据用户权限动态生成路由）
- 添加路由守卫权限控制
- 实现菜单树动态生成
- 新增 404 页面组件
- 添加加密工具函数（暂时禁用，待稳定后重新启用）

文档：
- 动态路由系统文档
- 配置指南
- 测试指南
- 快速入门指南

安全修复：
- P0 问题：JWT 密钥硬编码、CORS 配置过宽、前端加密密钥硬编码
- 所有 P0 问题已修复

测试：
- 前后端联调测试 100% 通过（36/36）
- 代码审计完成，发现 26 个问题